--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "../node_modules/normalize.css/normalize.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,4 +17,8 @@ code {
 .container {
   width: 1440px;
   margin: 0 auto;
+}
+
+.font-montserrat {
+  font-family: 'Montserrat', sans-serif;
 }
