--- a/src/components/List-Sale.css
+++ b/src/components/List-Sale.css
@@ -6,6 +6,9 @@ ul.list-sale-list {
     display: flex;
 
     list-style-type: none;
+    gap: 35px;
+    margin: 0;
+    padding: 20px 30px 40px 30px;
 }
 
 img.list-sale-img {
@@ -15,6 +18,7 @@ img.list-sale-img {
 
 div.list-sale-cost {
     display: flex;
+    align-items: center;
 }
 
 p.list-sale-title {
@@ -38,6 +42,8 @@ p.list-sale-cost-big {
     font-size: 30px;
     line-height: 39px;
     color: #000000;
+
+    margin-right: 44px;
 }
 
 p.list-sale-cost-line-through {
@@ -48,6 +54,8 @@ p.list-sale-cost-line-through {
     line-height: 26px;
     text-decoration-line: line-through;
     color: #8B8B8B;
+
+    margin-right: 33px;
 }
 
 p.list-sale-cost-sale {
@@ -66,4 +74,8 @@ p.list-sale-text {
     font-size: 16px;
     line-height: 21px;
     color: #3A3A3A;
+    text-align: left;
+
+    margin: 0;
+    margin-top: 10px;
 }
