--- a/src/components/AboutProduct.css
+++ b/src/components/AboutProduct.css
@@ -86,6 +86,13 @@ button.product-button {
     border-radius: 10px;
 
     margin-top: 40px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 36px;
+    color: #FFFFFF;
 }
 
 hr.product-line {
