--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -43,13 +43,17 @@ ul.header-list {
     margin-top: 44px;
 
     list-style-type: none;
+}
 
+a {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 21px;
     color: #000000;
+
+    text-decoration: none;
 }
 
 .basket {
