--- a/src/components/AllProducts.css
+++ b/src/components/AllProducts.css
@@ -26,6 +26,14 @@ div.all-products-choice {
     margin-bottom: 35px;
 }
 
+div.all-products-choice-price,
+div.all-products-choice-checkbox,
+div.all-products-choice-sort
+ {
+    display: flex;
+    align-items: center
+}
+
 p.all-products-choice-text {
     font-family: 'Montserrat';
     font-style: normal;
@@ -172,4 +180,22 @@ div.all-products-product {
     margin-top: 10px;
     margin-bottom: 20px;
     padding-left: 25px;
+}
+
+@media (max-width: 1100px) {
+    div.all-products-choice {
+        flex-direction: column;
+        align-items: flex-start
+    }
+
+    p.discount,
+    p.sort {
+        margin-left: 30px;
+    }
+
+    div.all-products-choice-price,
+    div.all-products-choice-checkbox,
+    div.all-products-choice-sort {
+    margin-top: 15px;
+    }
 }
