--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 footer.footer {
-    height: 933px;
+    max-height: 1200px;
 }
 
 div.footer-address-contacts {
@@ -107,8 +107,55 @@ p.footer-address-text {
 }
 
 iframe {
-    width: 1381px;
+    width: calc(100% - 60px);
     height: 525px;
 
     margin-left: 30px;
+    margin-right: 30px;
+}
+
+@media (max-width: 1200px) {
+    p.footer-contacts-phone {
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 52px;
+    }
+
+    p.footer-address-link {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 39px;
+    }
+}
+
+@media (max-width: 800px) {
+    p.footer-contacts-phone {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 39px;
+    }
+
+    p.footer-address-link {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    iframe {
+        height: 325px;
+    }
+}
+
+@media (max-width: 800px) {
+    p.footer-contacts-phone {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
+
+@media (max-width: 500px) {
+    div.footer-address-contacts {
+        flex-wrap: wrap;
+    }
 }
