--- a/src/components/Sale.css
+++ b/src/components/Sale.css
@@ -1,5 +1,5 @@
 section.sale-new-season {
-    height: 600px;
+    max-height: 600px;
 
     display: flex;
     justify-content: space-between;
@@ -38,6 +38,8 @@ p.sale-new-season {
     font-size: 63px;
     line-height: 82px;
     color: #FFFFFF;
+
+    text-align: left;
 }
 
 button.sale-button {
@@ -59,4 +61,33 @@ button.sale-button {
 
 img.sale-img {
     margin-top: -60px;
+}
+
+@media (max-width: 1100px) {
+    img.sale-img {
+        display: none;
+    }
+
+    div.sale {
+        padding-top: 80px;
+
+    }
+}
+
+@media (max-width: 1100px) {
+    h3.sale-title {
+        font-size: 60px;
+        line-height: 78px;
+    }
+
+    p.sale-new-season {
+        font-weight: 600;
+        font-size: 50px;
+        line-height: 65px;
+    }
+
+    div.sale {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
 }
