--- a/src/components/CategoriesList.css
+++ b/src/components/CategoriesList.css
@@ -27,6 +27,12 @@ img.categoties-list-img {
     height: 350px;
 
     margin-top: 35px;
+
+    transition: 1s;
+}
+
+img.categoties-list-img:hover {
+    transform: scale(1.1);
 }
 
 p.categoties-list-text {
@@ -40,6 +46,12 @@ p.categoties-list-text {
     color: #000000;
 
     margin-top: 20px;
+    transition: 1s;
+}
+
+p.categoties-list-text:hover { 
+    text-decoration: underline;
+    transform: scale(1.1);
 }
 
 @media (max-width: 1440px) {
