--- a/src/components/AboutProduct.css
+++ b/src/components/AboutProduct.css
@@ -129,6 +129,28 @@ p.product-description-text {
     color: #000000;
 }
 
+.btn{
+    width: 279px;
+    height: 72px;
+    position: absolute;
+    visibility: hidden;
+    border-radius: 21px;
+    border: 2px solid #339933;
+    color: #339933;
+    background: #F1FFF1;
+    bottom: 165px;
+    left: 20px;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+li.all-products-list:hover .btn{
+    visibility: visible;
+   
+}
+
 @media (max-width: 1440px) {
     div.product-card {
         justify-content: space-around;
